mindre inline style, lagt till länkar samt box

--- a/Apple_store/partials/_headings.scss
+++ b/Apple_store/partials/_headings.scss
@@ -367,14 +367,74 @@
 }
 
 // Contact home img
-.home_contact {
-  background: url(/images/p8.jpeg) no-repeat;
-  background-size: cover;
-  background-position: center;
+.big-box {
+  padding-top: 50px;
+  .fancy-rainbow{
+    margin: 0 auto;
+    width: fit-content;
+    font-size: 48px; font-weight: bolder;
+    background: -webkit-linear-gradient(45deg,#2ca2b4,#5598de 24%,#7f87ff 45%,#f65aad 76%,#ec3d43);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    
+  }
+  .fancy-purple{
+    margin: 0 auto;
+    width: fit-content;
+    font-size: 48px; font-weight: bolder;
+    background: -webkit-linear-gradient(#fdb6ff,#9c1cf1);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+  .a-list{
+    padding: 20px;
+    button{
+      font-size: 17px;
+      padding: 8px 16px;
+      border-radius: 2.5rem;
+      background-color: #0071E3;
+      color: white;
+    }
+    a{
+      margin-left: 20px;
+      font-size: 21px;
+      font-weight: 500;
+      color:#0071E3;
+    }
+  }
+}
+.split-box{
+  background-color: #FBFBFD;
+  padding-top: 12px;
   display: flex;
-  min-height: 80vh;
-  align-items: center;
   justify-content: center;
+  align-items: center;
+  gap: 50px;
+  .fancy-blue{
+    margin: 0 auto;
+    width: fit-content;
+    font-size: 48px;
+    font-weight: bolder;
+    background: -webkit-linear-gradient(90deg,#1e3791 0%,#2948b1 40%,#3153c6 55%,#214fe7 60%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+  .a-list{
+    padding: 20px;
+    button{
+      font-size: 17px;
+      padding: 8px 16px;
+      border-radius: 2.5rem;
+      background-color: #0071E3;
+      color: white;
+    }
+    a{
+      margin-left: 20px;
+      font-size: 21px;
+      font-weight: 500;
+      color:#0071E3;
+    }
+  }
 }
 
 //Contact form
