--- a/Apple_store/partials/_headings.scss
+++ b/Apple_store/partials/_headings.scss
@@ -50,7 +50,7 @@
   margin-top: 2rem;
 
   .content {
-    margin-top: 30rem;
+    margin-top: 48rem;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -87,6 +87,7 @@
     justify-content: center;
     align-items: center;
     padding: 1rem;
+    margin-top: 0;
 
     h1{
       font-size: 5.5rem;
