--- a/Apple_store/partials/_table.scss
+++ b/Apple_store/partials/_table.scss
@@ -1,5 +1,5 @@
 .table{
-    
+    background-color: #FAFAFA;
     ul{
         display: flex;
         width: fit-content;
@@ -23,7 +23,7 @@
     font-weight: 600;
 }
 
-.phone-table{
+.phone-table, .mac-table, .ipad-table{
     margin-top: 40px;
     margin: 40px auto 0;
     display: flex;
@@ -35,6 +35,9 @@
         display: flex;
         flex-direction: column;
         row-gap: 20px;
+        .hide{
+            color: transparent;
+        }
         .thead{
             width: 180px;
             display: flex;
@@ -42,8 +45,10 @@
             margin: 0 auto;
             align-items: center;
             border-bottom: 1px solid rgba(131, 131, 131, 0.308);
+            
             h4{
                 padding-top: 10px;
+                padding-bottom: 10px;
                 font-size: 12px;
                 font-weight: 300;
                 color: #BF4800;
@@ -54,10 +59,11 @@
                 padding-bottom: 10px;
             }
                 
-            p{
+            p, h3{
                 white-space: nowrap;
-                font-size: 16px;
-                color: #1D1D1F;
+                font-size: 15px;
+                font-weight: 600;
+                color: #1d1d1fa6;
             }
             .price{
                 padding-top: 30px;
@@ -71,6 +77,9 @@
                 padding: 3px 12px;
                 margin-top: 16px;
                 border-radius: 2.3rem;
+            }
+            .mac-table-headline{
+                height: 79px;
             }
             a{
                 font-size: 13.5px;
@@ -100,6 +109,9 @@
                 font-size: 13px;
                 margin-bottom: 3px;
             }
+            img{
+                padding-bottom: 10px;
+            }
             
             .island-specs{
                 height: 96px;
@@ -110,7 +122,13 @@
             .camera-specs{
                 height: 148px;
             }
-             div{
+            .macChip-specs{
+                height: 76px;
+            }
+            .mac-speaker-specs{
+                height: 90px;
+            }  
+            div{
                 div{
                     .spacer{font-weight: 700;}
                     
@@ -118,7 +136,7 @@
              }
         }
     }
-    .col3, .col4{
+    .col3, .col4, .col31, .col34, .col22, .col24{
         .thead{
             
             h4{
@@ -128,6 +146,26 @@
         
     }
     
+}
+.ipad-table{
+    .col{
+        .thead{
+            h2{
+                padding-bottom: 0;
+            }
+            h3{
+                padding-bottom: 10px;
+                
+            }
+        }
+    }
+}
+.mac-table{
+    .col{
+        .thead{
+
+        }
+    }
 }
 @media screen and (max-width: 960px){
     .phone-table{
