--- a/Apple_store/styles/style.css
+++ b/Apple_store/styles/style.css
@@ -551,14 +551,14 @@ footer .legal ul li:last-child {
   background-size: cover;
   background-position: center;
   display: flex;
-  max-height: 70vh;
-  align-items: center;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
 }
 .change_ipad_text .content_text {
-  margin-top: -3rem;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
   max-width: 60%;
 }
@@ -582,25 +582,26 @@ footer .legal ul li:last-child {
 }
 
 .change_ipad {
-  background: url(/Apple_store/images/ipad_images/i44.png) no-repeat;
+  background: url(/Apple_store/images/ipad_images/i444.png) no-repeat;
   background-size: cover;
   background-position: center;
   display: flex;
-  min-height: 60vh;
+  flex-direction: column;
   align-items: center;
-  justify-content: center;
+  min-height: 60vh;
 }
-.change_ipad .content {
-  margin-top: 30rem;
+.change_ipad .content_text {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: flex-start;
+  max-width: 80%;
 }
-.change_ipad .content ul li {
+.change_ipad .content_text ul li {
   list-style: none;
   display: inline;
 }
-.change_ipad .content ul li a {
+.change_ipad .content_text ul li a {
   font-size: 2rem;
   color: #06c;
   letter-spacing: inherit;
@@ -1325,7 +1326,7 @@ ul li a:hover {
        columns: 2 37rem;
   -moz-column-gap: 2rem;
        column-gap: 2rem;
-  max-width: 1422px;
+  max-width: 1440px;
   margin: auto;
 }
 .mac_gallery .mac_box_container .mac_gallery1 {
