--- a/Apple_store/partials/_text-image.scss
+++ b/Apple_store/partials/_text-image.scss
@@ -136,14 +136,14 @@
 // Big text stylings 
 .big_text {
   font-size: 3.5rem;
-  font-weight: 800;
+  font-weight: 600;
   margin: 8rem 0 5rem;
 }
 
 .big_text_xl {
   font-size: 6rem;
   font-weight: 500;
-  margin: 8rem 0 5rem;
+  padding: 8rem 0 5rem;
 }
 // Big text 0.5rem margin
 .big_text_xl_0{
@@ -178,9 +178,9 @@
 }
 
 .big_text_x {
-  font-size: 6rem;
-  font-weight: 500;
-  margin: 8rem 0 0;
+  font-size: 5rem;
+  font-weight: 400;
+  padding: 8rem 0 0;
 }
 
 .big_text_x_ipad {
