--- a/Apple_store/styles/style.css
+++ b/Apple_store/styles/style.css
@@ -935,7 +935,8 @@ ul li a:hover {
 }
 
 .table {
-  background-color: #FAFAFA;
+  padding-top: 70px;
+  background-color: #ffffff;
 }
 .table ul {
   display: flex;
@@ -955,12 +956,16 @@ ul li a:hover {
   font-size: 15px;
 }
 
+.mac-wrapper {
+  background-color: #fafafa;
+}
+
 .table-headline {
   font-size: 36px;
   font-weight: 600;
 }
 
-.phone-table, .mac-table, .ipad-table {
+.phone-table, .mac-table, .ipad-table, .watch-table {
   margin-top: 40px;
   margin: 40px auto 0;
   display: flex;
@@ -968,7 +973,7 @@ ul li a:hover {
   -moz-column-gap: 50px;
        column-gap: 50px;
 }
-.phone-table .col, .mac-table .col, .ipad-table .col {
+.phone-table .col, .mac-table .col, .ipad-table .col, .watch-table .col {
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
@@ -976,10 +981,7 @@ ul li a:hover {
   flex-direction: column;
   row-gap: 20px;
 }
-.phone-table .col .hide, .mac-table .col .hide, .ipad-table .col .hide {
-  color: transparent;
-}
-.phone-table .col .thead, .mac-table .col .thead, .ipad-table .col .thead {
+.phone-table .col .thead, .mac-table .col .thead, .ipad-table .col .thead, .watch-table .col .thead {
   width: 180px;
   display: flex;
   flex-direction: column;
@@ -987,29 +989,32 @@ ul li a:hover {
   align-items: center;
   border-bottom: 1px solid rgba(131, 131, 131, 0.308);
 }
-.phone-table .col .thead h4, .mac-table .col .thead h4, .ipad-table .col .thead h4 {
+.phone-table .col .thead .hide, .mac-table .col .thead .hide, .ipad-table .col .thead .hide, .watch-table .col .thead .hide {
+  color: transparent;
+}
+.phone-table .col .thead h4, .mac-table .col .thead h4, .ipad-table .col .thead h4, .watch-table .col .thead h4 {
   padding-top: 10px;
   padding-bottom: 10px;
   font-size: 12px;
   font-weight: 300;
   color: #BF4800;
 }
-.phone-table .col .thead h2, .mac-table .col .thead h2, .ipad-table .col .thead h2 {
+.phone-table .col .thead h2, .mac-table .col .thead h2, .ipad-table .col .thead h2, .watch-table .col .thead h2 {
   font-weight: 600;
   font-size: 20px;
   padding-bottom: 10px;
 }
-.phone-table .col .thead p, .phone-table .col .thead h3, .mac-table .col .thead p, .mac-table .col .thead h3, .ipad-table .col .thead p, .ipad-table .col .thead h3 {
+.phone-table .col .thead p, .phone-table .col .thead h3, .mac-table .col .thead p, .mac-table .col .thead h3, .ipad-table .col .thead p, .ipad-table .col .thead h3, .watch-table .col .thead p, .watch-table .col .thead h3 {
   white-space: nowrap;
   font-size: 15px;
   font-weight: 600;
   color: rgba(29, 29, 31, 0.6509803922);
 }
-.phone-table .col .thead .price, .mac-table .col .thead .price, .ipad-table .col .thead .price {
+.phone-table .col .thead .price, .mac-table .col .thead .price, .ipad-table .col .thead .price, .watch-table .col .thead .price {
   padding-top: 30px;
   font-size: 13.5px;
 }
-.phone-table .col .thead button, .mac-table .col .thead button, .ipad-table .col .thead button {
+.phone-table .col .thead button, .mac-table .col .thead button, .ipad-table .col .thead button, .watch-table .col .thead button {
   color: white;
   cursor: pointer;
   font-size: 12px;
@@ -1018,21 +1023,21 @@ ul li a:hover {
   margin-top: 16px;
   border-radius: 2.3rem;
 }
-.phone-table .col .thead .mac-table-headline, .mac-table .col .thead .mac-table-headline, .ipad-table .col .thead .mac-table-headline {
+.phone-table .col .thead .mac-table-headline, .mac-table .col .thead .mac-table-headline, .ipad-table .col .thead .mac-table-headline, .watch-table .col .thead .mac-table-headline {
   height: 79px;
 }
-.phone-table .col .thead a, .mac-table .col .thead a, .ipad-table .col .thead a {
+.phone-table .col .thead a, .mac-table .col .thead a, .ipad-table .col .thead a, .watch-table .col .thead a {
   font-size: 13.5px;
   color: #0071E3;
   margin-bottom: 25px;
 }
-.phone-table .col .thead a:hover, .mac-table .col .thead a:hover, .ipad-table .col .thead a:hover {
+.phone-table .col .thead a:hover, .mac-table .col .thead a:hover, .ipad-table .col .thead a:hover, .watch-table .col .thead a:hover {
   text-decoration: underline;
 }
-.phone-table .col .thead a i, .mac-table .col .thead a i, .ipad-table .col .thead a i {
+.phone-table .col .thead a i, .mac-table .col .thead a i, .ipad-table .col .thead a i, .watch-table .col .thead a i {
   font-size: 10px;
 }
-.phone-table .col .tbody, .mac-table .col .tbody, .ipad-table .col .tbody {
+.phone-table .col .tbody, .mac-table .col .tbody, .ipad-table .col .tbody, .watch-table .col .tbody {
   color: rgba(29, 29, 31, 0.7411764706);
   display: flex;
   flex-direction: column;
@@ -1040,37 +1045,53 @@ ul li a:hover {
   padding-bottom: 40px;
   border-bottom: 1px solid rgba(131, 131, 131, 0.308);
 }
-.phone-table .col .tbody h3, .mac-table .col .tbody h3, .ipad-table .col .tbody h3 {
+.phone-table .col .tbody .hide, .mac-table .col .tbody .hide, .ipad-table .col .tbody .hide, .watch-table .col .tbody .hide {
+  color: transparent;
+}
+.phone-table .col .tbody h3, .mac-table .col .tbody h3, .ipad-table .col .tbody h3, .watch-table .col .tbody h3 {
   font-size: 16px;
   margin-bottom: 7px;
 }
-.phone-table .col .tbody p, .mac-table .col .tbody p, .ipad-table .col .tbody p {
+.phone-table .col .tbody p, .mac-table .col .tbody p, .ipad-table .col .tbody p, .watch-table .col .tbody p {
   font-size: 13px;
   margin-bottom: 3px;
 }
-.phone-table .col .tbody img, .mac-table .col .tbody img, .ipad-table .col .tbody img {
+.phone-table .col .tbody img, .mac-table .col .tbody img, .ipad-table .col .tbody img, .watch-table .col .tbody img {
   padding-bottom: 10px;
 }
-.phone-table .col .tbody .island-specs, .mac-table .col .tbody .island-specs, .ipad-table .col .tbody .island-specs {
+.phone-table .col .tbody .island-specs, .mac-table .col .tbody .island-specs, .ipad-table .col .tbody .island-specs, .watch-table .col .tbody .island-specs {
   height: 96px;
 }
-.phone-table .col .tbody .chip-specs, .mac-table .col .tbody .chip-specs, .ipad-table .col .tbody .chip-specs {
+.phone-table .col .tbody .chip-specs, .mac-table .col .tbody .chip-specs, .ipad-table .col .tbody .chip-specs, .watch-table .col .tbody .chip-specs {
   height: 77px;
 }
-.phone-table .col .tbody .camera-specs, .mac-table .col .tbody .camera-specs, .ipad-table .col .tbody .camera-specs {
+.phone-table .col .tbody .camera-specs, .mac-table .col .tbody .camera-specs, .ipad-table .col .tbody .camera-specs, .watch-table .col .tbody .camera-specs {
   height: 148px;
 }
-.phone-table .col .tbody .macChip-specs, .mac-table .col .tbody .macChip-specs, .ipad-table .col .tbody .macChip-specs {
+.phone-table .col .tbody .macChip-specs, .mac-table .col .tbody .macChip-specs, .ipad-table .col .tbody .macChip-specs, .watch-table .col .tbody .macChip-specs {
   height: 76px;
 }
-.phone-table .col .tbody .mac-speaker-specs, .mac-table .col .tbody .mac-speaker-specs, .ipad-table .col .tbody .mac-speaker-specs {
+.phone-table .col .tbody .mac-speaker-specs, .mac-table .col .tbody .mac-speaker-specs, .ipad-table .col .tbody .mac-speaker-specs, .watch-table .col .tbody .mac-speaker-specs {
   height: 90px;
 }
-.phone-table .col .tbody div div .spacer, .mac-table .col .tbody div div .spacer, .ipad-table .col .tbody div div .spacer {
+.phone-table .col .tbody .ekg-specs, .mac-table .col .tbody .ekg-specs, .ipad-table .col .tbody .ekg-specs, .watch-table .col .tbody .ekg-specs {
+  height: 73px;
+}
+.phone-table .col .tbody .oxygen-specs, .mac-table .col .tbody .oxygen-specs, .ipad-table .col .tbody .oxygen-specs, .watch-table .col .tbody .oxygen-specs {
+  height: 73px;
+}
+.phone-table .col .tbody .temperature-specs, .mac-table .col .tbody .temperature-specs, .ipad-table .col .tbody .temperature-specs, .watch-table .col .tbody .temperature-specs {
+  height: 135px;
+}
+.phone-table .col .tbody div div .spacer, .mac-table .col .tbody div div .spacer, .ipad-table .col .tbody div div .spacer, .watch-table .col .tbody div div .spacer {
   font-weight: 700;
 }
-.phone-table .col3 .thead h4, .phone-table .col4 .thead h4, .phone-table .col31 .thead h4, .phone-table .col34 .thead h4, .phone-table .col22 .thead h4, .phone-table .col24 .thead h4, .mac-table .col3 .thead h4, .mac-table .col4 .thead h4, .mac-table .col31 .thead h4, .mac-table .col34 .thead h4, .mac-table .col22 .thead h4, .mac-table .col24 .thead h4, .ipad-table .col3 .thead h4, .ipad-table .col4 .thead h4, .ipad-table .col31 .thead h4, .ipad-table .col34 .thead h4, .ipad-table .col22 .thead h4, .ipad-table .col24 .thead h4 {
+.phone-table .col3 .thead h4, .phone-table .col4 .thead h4, .phone-table .col31 .thead h4, .phone-table .col34 .thead h4, .phone-table .col22 .thead h4, .phone-table .col24 .thead h4, .mac-table .col3 .thead h4, .mac-table .col4 .thead h4, .mac-table .col31 .thead h4, .mac-table .col34 .thead h4, .mac-table .col22 .thead h4, .mac-table .col24 .thead h4, .ipad-table .col3 .thead h4, .ipad-table .col4 .thead h4, .ipad-table .col31 .thead h4, .ipad-table .col34 .thead h4, .ipad-table .col22 .thead h4, .ipad-table .col24 .thead h4, .watch-table .col3 .thead h4, .watch-table .col4 .thead h4, .watch-table .col31 .thead h4, .watch-table .col34 .thead h4, .watch-table .col22 .thead h4, .watch-table .col24 .thead h4 {
   color: transparent;
+}
+
+.phone-table {
+  background-color: white;
 }
 
 .ipad-table .col .thead h2 {
@@ -1080,13 +1101,20 @@ ul li a:hover {
   padding-bottom: 10px;
 }
 
+.watch-table .col .thead {
+  width: 250px;
+}
+.watch-table .col .thead .price {
+  padding-top: 5px;
+}
+.watch-table .col .tbody .sos-specs {
+  height: 213px;
+}
+
 @media screen and (max-width: 960px) {
-  .phone-table {
+  .phone-table, .mac-table, .ipad-table {
     flex-wrap: wrap;
     width: 600px;
-  }
-  .phone-table .col .thead {
-    width: 220px;
   }
 }
 .gallery .box-container {
