--- a/Apple_store/partials/_headings.scss
+++ b/Apple_store/partials/_headings.scss
@@ -1,5 +1,6 @@
 // Home page section home
 .home {
+  margin-top: 5rem;
   background: url(/apple_store/images/home_images/h1.1.png) no-repeat;
   background-size: cover;
   background-position: center;
@@ -130,6 +131,7 @@
 // MacBook Pro section
 
 .macBook_pro {
+  margin-top: 5rem;
   background: url(/Apple_store/images/mac_images/m2.png) no-repeat;
   background-size: cover;
   background-position: center;
