Small changes on ipad pictures

--- a/Apple_store/styles/style.css
+++ b/Apple_store/styles/style.css
@@ -474,7 +474,7 @@ footer .legal ul li:last-child {
   background-size: cover;
   background-position: center;
   display: flex;
-  height: 80vh;
+  height: 70vh;
   min-width: 30vw;
   align-items: center;
   justify-content: center;
@@ -518,21 +518,25 @@ footer .legal ul li:last-child {
   background-size: cover;
   background-position: center;
   display: flex;
+  flex-direction: row;
   min-height: 60vh;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
+  margin: 0 5rem;
 }
-.ipad .content {
+.ipad .content_about_ipad {
   margin-top: -5rem;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
+  margin-left: 10rem;
 }
-.ipad .content ul li {
+.ipad .content_about_ipad ul li {
   list-style: none;
   display: inline;
 }
-.ipad .content ul li a {
+.ipad .content_about_ipad ul li a {
   font-size: 2rem;
   color: #06c;
   letter-spacing: inherit;
